--- a/styles/app/index.styl
+++ b/styles/app/index.styl
@@ -1,3 +1,5 @@
+@import './github.css'
+
 /*h1, h2, h3
   margin-top: 0 !important
   padding-top: 60px !important*/
@@ -37,7 +39,10 @@ pre
     border-radius: inherit !important
 
 code
-  color: #333 !important
+  display: block;
+  padding: 0.5em;
+  color: #333;
+  background: #f8f8f8
 
 blockquote
   padding: 0 16px;
