fix invalid html

--- a/views/app/template.html
+++ b/views/app/template.html
@@ -56,7 +56,7 @@
           </a>
           <br>
           <h1>{{name}}</h1>
-          <p class="lead">{{description}}</p>
+          <div class="lead">{{description}}</div>
         </div>
 
       </div>
