--- a/views/app/index.html
+++ b/views/app/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/img/logo.png"/></a>
+          <a class="navbar-brand" href="/"><img src="/img/logo.png"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -74,7 +74,7 @@
             For more impressions, open this page in some browser windows and edit the input.
           </p>
           <p class="lead">
-            <input type="text" value="{{examples.text}}"/><br>
+            <input type="text" value="{{examples.text}}"><br>
             {{examples.text}}
           </p>
         </div>
@@ -91,7 +91,7 @@ app.get('/', function(page, model) {
 ```
 
 ```html
-<input type="text" value="{{examples.text}}"/><br>
+<input type="text" value="{{examples.text}}"><br>
 {{examples.text}}
 ```
 {{/markdown}}
